compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_annotation_wrong_4.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1131
expression: "pub const pair: #(Int, Float) = #(4.1, 1)"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:33
  │
1 │ pub const pair: #(Int, Float) = #(4.1, 1)
  │                                 ^^^^^^^^^

Expected type:

    #(Int, Float)

Found type:

    #(Float, Int)


